[package]
name = "CipherChatServer"
version = "0.1.0"
edition = "2021"
authors = ["Nycz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"] }
# tungstenite = { version = "0.13", features = ["native-tls"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.19"
tokio-rustls = "0.24.1"
lazy_static = "1.4.0"
rustls-pemfile = "1.0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusqlite = {version= "0.29.0", features = ["bundled"]} 

sha256 = "1.1.4"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

